<resources>
    <string name="app_name">WeAR</string>
    <string name="anuncio1">Conheça Nossos produtos</string>
    <string name="anel_no_singular">Anél</string>
    <string name="anel_no_plural">Anéis</string>
    <string name="oculos">Óculos</string>
    <string name="texto_home1">Anéis para todos os gostos e de todos os tamanhos, com Try On disponivel.</string>
    <string name="texto_home2">Diversas opções de óculos de grau e de sol com Try On diponível, tanto na web quanto no app.</string>
    <string name="txtMaisVendidos">Produtos Recomendados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cifrão">R$</string>
    <string name="txtCatalogo">Catálogo</string>
    <string name="txtCarrinho">Carrinho</string>
    <string name="txtProdutos">Produtos</string>
    <string name="txtPesquisar">Pesquisar</string>
    <string name="voltarImageDesc">Imagem de uma seta indicando voltar para página anterior</string>
    <string name="txtOculosSol">Sol</string>
    <string name="txtOculosGrau">Grau</string>
    <string name="txtAnel">Anel</string>
    <string name="txtNome">Nome</string>
    <string name="txtDescProd">Descrição</string>
    <string name="txtQuantidade">Quantidade em Estoque: </string>
    <string name="txtQntdComprar">Quantidade desejada:</string>
    <string name="btnComprar">Comprar</string>
    <string name="btnTryON">Try-ON</string>
    <string name="hintProdQntd">Insira a Quantidade</string>
    <string name="txtTamanhoSelecionar">Selecione o Tamanho:</string>
    <string name="txtTituloCarrinho">Seu Carrinho</string>
    <string name="txtValorCompra">Valor Total da Compra</string>
    <string name="btnRemoverProd">Remover</string>
    <string name="txtPreco">Preço: </string>
    <string name="txtQntd">Quantidade:</string>
    <string name="txtCarrinhoMsg">Você ainda não tem nenhum produto no seu carrinho! </string>
    <string name="txtTamanho">Tamanho:</string>
    <string name="txtMessageCarregando">Estamos carregando as informações, por favor aguarde!</string>

</resources>