<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:importantForAutofill="auto"
    android:pointerIcon="context_menu"
    android:verticalScrollbarPosition="left"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/txtPrecoCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/postnobillscolomboregular"
                android:text="@string/txtPreco"
                android:textColor="@color/textos"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toBottomOf="@+id/titulo_carrinho" />

            <ImageView
                android:id="@+id/molduraCarrinho"
                android:layout_width="170dp"
                android:layout_height="226dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloCarrinho"
                app:srcCompat="@drawable/moldura1" />

            <TextView
                android:id="@+id/titulo_carrinho"
                android:layout_width="209dp"
                android:layout_height="52dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/postnobillscolomboextrabold"
                android:text="@string/txtNome"
                android:textColor="@color/titulos"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtQntdCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/postnobillscolomboregular"
                android:text="@string/txtQntd"
                android:textColor="@color/textos"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecoCarrinho" />

            <Button
                android:id="@+id/btnRemoverProduto"
                android:layout_width="171dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/azul"
                android:fontFamily="@font/postnobillscolombosemibold"
                android:text="@string/btnRemoverProd"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toBottomOf="@+id/txtTamanho" />

            <EditText
                android:id="@+id/edtQntdCarrinho"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/postnobillscolomboregular"
                android:hint="@string/hello_blank_fragment"
                android:inputType="number"
                android:textColor="@color/textos"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btnRemoverProduto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/txtQntdCarrinho"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecoCarrinho"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/ivImagemProdCarrinho"
                android:layout_width="128dp"
                android:layout_height="147dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/molduraCarrinho"
                app:layout_constraintEnd_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintStart_toStartOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toTopOf="@+id/molduraCarrinho"
                app:srcCompat="@drawable/anel" />

            <TextView
                android:id="@+id/txtTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/postnobillscolomboregular"
                android:text="@string/txtTamanho"
                android:textColor="@color/textos"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/molduraCarrinho"
                app:layout_constraintTop_toBottomOf="@+id/txtQntdCarrinho" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>