<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintProduto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:importantForAutofill="auto"
    android:pointerIcon="context_menu"
    android:verticalScrollbarPosition="left"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-78dp"
            tools:layout_editor_absoluteY="84dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <ImageView
                    android:id="@+id/imgMolduraGrandeHome"
                    android:layout_width="fill_parent"
                    android:layout_height="267dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/moldura3" />


                <TextView
                    android:id="@+id/txtNomeProd"
                    android:layout_width="354dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/postnobillscolombosemibold"
                    android:text="@string/txtNome"
                    android:textColor="@color/titulos"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgMolduraGrandeHome"></TextView>

                <TextView
                    android:id="@+id/txtMaisVendidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/postnobillscolomboregular"
                    android:text="@string/txtMaisVendidos"
                    android:textColor="@color/titulos"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.04"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnTryON" />

                <ImageView
                    android:id="@+id/imgDec1"
                    android:layout_width="55dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="365dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/enfeite" />

                <ImageView
                    android:id="@+id/imgDec2"
                    android:layout_width="55dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginEnd="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/enfeite" />

                <ImageView
                    android:id="@+id/imgDec3"
                    android:layout_width="47dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="370dp"
                    android:layout_marginTop="110dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/enfeite" />

                <ImageView
                    android:id="@+id/imgDec4"
                    android:layout_width="65dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/enfeite" />

                <ImageView
                    android:id="@+id/imgRecomendadoProduto1"
                    android:layout_width="115dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toStartOf="@+id/imgRecomendadoProduto2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/anel" />

                <ImageView
                    android:id="@+id/imgRecomendadoProduto2"
                    android:layout_width="115dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/anel" />

                <ImageView
                    android:id="@+id/imgRecomendadoProduto3"
                    android:layout_width="115dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.535"
                    app:layout_constraintStart_toEndOf="@+id/imgRecomendadoProduto2"
                    app:layout_constraintTop_toBottomOf="@+id/txtMaisVendidos"
                    app:srcCompat="@drawable/anel" />

                <ImageView
                    android:id="@+id/imgProdutoPag"
                    android:layout_width="235dp"
                    android:layout_height="161dp"
                    android:layout_marginBottom="3dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/txtNomeProd"
                    app:layout_constraintEnd_toEndOf="@+id/imgMolduraGrandeHome"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="@+id/imgMolduraGrandeHome"
                    app:layout_constraintTop_toTopOf="@+id/imgMolduraGrandeHome"
                    app:layout_constraintVertical_bias="0.513"
                    app:srcCompat="@drawable/anel" />

                <TextView
                    android:id="@+id/txtDescProd"
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/postnobillscolomboregular"
                    android:text="@string/txtDescProd"
                    android:textColor="@color/textos"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNomeProd" />

                <TextView
                    android:id="@+id/txtQuantidadeEstoque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/postnobillscolomboregular"
                    android:text="@string/txtQuantidade"
                    android:textColor="@color/textos"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPreco" />

                <TextView
                    android:id="@+id/txtQntdCompra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/postnobillscolomboregular"
                    android:text="@string/txtQntdComprar"
                    android:textColor="@color/textos"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeEstoque" />

                <Button
                    android:id="@+id/btnComprar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/azul"
                    android:fontFamily="@font/postnobillscolombomedium"
                    android:text="@string/btnComprar"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerTamanhos" />

                <Button
                    android:id="@+id/btnTryON"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/azul"
                    android:fontFamily="@font/postnobillscolombomedium"
                    android:text="@string/btnTryON"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnComprar" />

                <ImageView
                    android:id="@+id/btnVoltarProduto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toTopOf="@+id/imgProdutoPag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/voltar" />

                <EditText
                    android:id="@+id/edtQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:fontFamily="@font/postnobillscolombosemibold"
                    android:hint="@string/hintProdQntd"
                    android:inputType="number"
                    android:textColor="@color/textos"
                    android:textColorHint="@color/textos"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/txtQntdCompra"
                    app:layout_constraintTop_toBottomOf="@+id/txtQuantidadeEstoque" />

                <Spinner
                    android:id="@+id/spinnerTamanhos"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@color/amarelo_fraco"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtQuantidade" />

                <TextView
                    android:id="@+id/txtPreco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/postnobillscolomboregular"
                    android:text="@string/txtPreco"
                    android:textColor="@color/textos"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescProd" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>